--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shimmer: ^3.0.0
   flutter_svg: ^2.0.9
   auto_size_text: ^3.0.0
+  flutter_spinkit: ^5.2.0
+
   # Data
   get_storage: ^2.1.1 
   intl: ^0.19.0
@@ -79,8 +81,9 @@ flutter:
   uses-material-design: true
 
   assets:
-      - assets/
-      - assets/svg/
+    - assets/
+    - assets/svg/
+    
   fonts:
     - family: Poppins
       fonts:
